[package]
name = "dxcllistener"
version = "0.3.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/dxcllistener.git"
description = "A listener to listen for new spots from a DX cluster"
keywords = ["ham", "ham-radio", "dxcluster", "cluster"]


[dependencies]
dxclparser = "1.0.0"
thiserror = "1.0.34"

[dev-dependencies]
ctrlc = "3.2.3"