[package]
name = "dxcllistener"
version = "0.4.0"
authors = ["Max <max@karl.wf>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/koarlchen/dxcllistener.git"
description = "A listener to listen for new spots from a DX cluster"
keywords = ["ham", "ham-radio", "dxcluster", "cluster"]


[dependencies]
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["time", "rt", "net", "sync", "io-util", "macros"] }

[dev-dependencies]
tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread"] }